Fix bug body flex e inputs, body wrap

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ html {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-flow: row wrap;
 }
 
 table {
